--- a/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
@@ -29,7 +29,7 @@ high-priority tasks or only warnings and errors associated with a particular
 resource or group of resources.&nbsp;</p>
 <p CLASS="Head">
 By default, the Tasks view is included in the Resources perspective. To add it
-to the current perspective, click <b>Perspective &gt; Show View &gt; Basic &gt; Tasks</b>.
+to the current perspective, click <b>Window &gt; Show View &gt; Basic &gt; Tasks</b>.
 </p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="cbookmrk.htm">Bookmarks</a>
