--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -48,7 +48,7 @@
      <a href="../reference/ref-121.htm">New Java Project wizard</a><br>
      <a href="../reference/ref-preferences-new-project.htm">New Project preferences</a></p>
 
-    <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
+    <p><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
