--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -43,7 +43,7 @@
     <p><br>
     </p>
 
-    <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
+    <p>&nbsp;<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a></p>
   </body>
 </html>
 
