--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -356,6 +356,9 @@ to if we had a "Tip of the Day" facility).]</p><p></p>
 	</tbody>
 </table>
 <br>
+	<p> 
+      <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height="14"></a>
+	</p>
 
 </body>
 </html>
