--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-10.htm
@@ -30,7 +30,7 @@
     <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" width="159" height="27"><br>
     <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a></p>
     <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
+      <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height=
       "14"></a>
     </p>
   </body>
