--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -174,7 +174,7 @@
   <a href="../concepts/concepts-10.htm">Debugger</a><br>
   <a href="../concepts/concepts-7.htm">Java editor</a></p>
 	<p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+      <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height="14"></a>
 	</p>  
   </body>
 </html>
