--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -1058,7 +1058,10 @@ border=0></FONT></P></TD></TR>
       of task tags appearing in Java comments.</FONT> 
       <P align=center><IMG src="images/task-tags.gif" ></P></TD></TR>
 </table>
-<hr>
+
+	<p> 
+      <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" width="324" height="14"></a>
+	</p>
 </body>
 
 </html>
