--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -13,37 +13,23 @@
 <body>
 
 <h2>What's New in 2.1</h2>
-<p>[This section should make interesting reading for an end user of Eclipse 2.0
-who has just switched to 2.1 (or is contemplating switching). It should inform
-them the most interesting and most significant visible changes that came along
-with 2.1. The section should be complete, in that no interesting, significant,
-visible change should go unmentioned. It differs in tone from the Tips and
-Tricks section in that it only covers things that are new for 2.1, and that it
-only deals with things that users would feel like was a significant improvement.
-Each item should stand by itself, so that the items can be easily rearranged and
-subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p>
-<p>[This section is still preliminary. The material here is lifted from the M2
-through M5 &quot;New and Noteworthy&quot; bulletins.]</p>
-<p>[Formatting changes: add horizontal line between each item; change font and
-size throughout.]</p>
-<table border="0" cellpadding="10" cellspacing="0" width="500">
+
+<p>Here are some of the more significant changes made for the 2.1 release of
+Eclipse since 2.0:</p>
+
+<table border="1" cellpadding="10" cellspacing="0" width="600">
   <tr>
-    <td colspan="2" valign="top">
-      <hr>
-    </td>
-  </tr>
-  <tr>
-    <td width="30%" valign="top" align="right"><b>User customizable<br>
+    <td width="20%" valign="top" align="right"><b>User customizable<br>
       key bindings</b></td>
-    <td width="70%" valign="top" align="left">You can now customize key bindings
+    <td width="80%" valign="top" align="left">You can now customize key bindings
       using <b>Workbench &gt; Keys</b> preference page. Emacs users will find a
       predefined set of key bindings awaiting them.
       <p><img border="0" src="images/key-bindings.gif" width="408" height="426"></p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Editor navigation history</b></td>
-    <td width="70%" valign="top" align="left">Workbench editors now keep a
+    <td width="20%" valign="top" align="right"><b>Editor navigation history</b></td>
+    <td width="80%" valign="top" align="left">Workbench editors now keep a
       navigation history. If you open a second editor while you're editing away,
       you can use <b>Navigate &gt; Back</b> to get back, or press the back
       button on the workbench toolbar. The back button on your mouse also does
@@ -52,8 +38,8 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Improved default text editor</b></td>
-    <td width="70%" valign="top" align="left">The default text editor now
+    <td width="20%" valign="top" align="right"><b>Improved default text editor</b></td>
+    <td width="80%" valign="top" align="left">The default text editor now
       supports line numbers, cursor-line highlighting, print margin, annotation
       highlighting, and an overview ruler. All of these can be configured from
       the <b>Workbench &gt; Editors &gt; Text Editor</b> preference page.
@@ -61,8 +47,8 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Calmer editor linking behavior</b></td>
-    <td width="70%" valign="top" align="left">The resource Navigator view is no
+    <td width="20%" valign="top" align="right"><b>Calmer editor linking behavior</b></td>
+    <td width="80%" valign="top" align="left">The resource Navigator view is no
       longer tightly linked to the currently open editor by default. This means
       that closing or switching editors does not change the selection in the
       Navigator view, which many found disorienting. Toggle the <b>Link with
@@ -72,9 +58,9 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Better UI for editor / view
+    <td width="20%" valign="top" align="right"><b>Better UI for editor / view
       synchronization</b></td>
-    <td width="70%" valign="top" align="left">The new <b>Navigate &gt; Show In</b>
+    <td width="80%" valign="top" align="left">The new <b>Navigate &gt; Show In</b>
       action provides a uniform way to navigate from an open editor to a view
       showing the corresponding file (e.g., in the resource Navigator view), or
       from a file selected in one view to the same file in a different view
@@ -84,8 +70,8 @@ size throughout.]</p>
     </td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Ant view</b></td>
-    <td width="70%" valign="top" align="left">There is a new Ant view (<b>Window
+    <td width="20%" valign="top" align="right"><b>Ant view</b></td>
+    <td width="80%" valign="top" align="left">There is a new Ant view (<b>Window
       &gt; Show View &gt; Ant</b>) that makes it easier to run Ant build files. The
       Ant view allows you to view your Ant build files in one place and simplifies
       running a single Ant target. The view includes a search button for
@@ -93,9 +79,9 @@ size throughout.]</p>
       <p align="center"><img border="0" src="../images/ant-view.gif" width="292" height="169" alt="Ant view"></td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>External tools &amp; launch
+    <td width="20%" valign="top" align="right"><b>External tools &amp; launch
       configurations</b></td>
-    <td width="70%" valign="top" align="left">
+    <td width="80%" valign="top" align="left">
       <p>External tools have been completely migrated to use launch
       configurations. The <b>Run &gt; External Tools</b> drop-down menu now
       appears and works in the same fashion as the run and debug drop-down
@@ -106,15 +92,15 @@ size throughout.]</p>
       <p align="center"><img border="0" src="images/ant-tabs.gif" width="474" height="572" alt="Launch configuration dialog"></td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>Ant editor</b></td>
-    <td width="70%" valign="top" align="left">
+    <td width="20%" valign="top" align="right"><b>Ant editor</b></td>
+    <td width="80%" valign="top" align="left">
       <p>There is a new Ant editor that makes it easier to edit Ant build files.
       The Ant editor provides content assist, syntax highlighting, an outline, and error reporting.</p>
       <p align="center"><img border="0" src="images/ant-editor.gif" width="444" height="144" alt="Ant editor"></td>
   </tr>
   <tr>
-    <td width="30%" valign="top" align="right"><b>More flexible project layouts</b></td>
-    <td width="70%" valign="top" align="left">There is now improved support for
+    <td width="20%" valign="top" align="right"><b>More flexible project layouts</b></td>
+    <td width="80%" valign="top" align="left">There is now improved support for
       dealing with externally imposed restrictions on how the files in a
       workspace project are laid out in the local file system. When creating a
       folder (or file), you can link it to an existing location in the file
